fix: scroll and overflow fix

--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -1,5 +1,7 @@
 .article,
 .content {
+  @apply break-words;
+
   a {
     @apply font-semibold underline;
   }
