--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,6 +2,10 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+/* * {
+  outline: solid 1px red;
+} */
+
 body {
   @apply text-gray-700 bg-white;
   @apply dark:text-gray-300 dark:bg-gray-900;
@@ -65,7 +69,7 @@ article a {
 
 hr {
   /* @apply my-3 text-indigo-500; */
-  @apply w-2/3 h-px mx-auto my-20 text-indigo-500 transform bg-indigo-500 md:w-2/3 rotate-1;
+  @apply w-2/3 h-px mx-auto my-10 md:my-20 text-indigo-500 transform bg-indigo-500 md:w-2/3 rotate-1;
 }
 
 .container {
